# MonitorIntegration

src/MonitorIntegrationCPP/: .gitignore  CMakeLists.txt  MonitorIntegration.rc  resource.h
src/MonitorIntegrationCPP/dependencies/include/simpleweb/: http_examples.cpp
src/MonitorIntegrationCPP/include/: CConfigManager.h  CHttpServerChannel.h  CMonitor.h  CMonitorApp.h  IMonitorApp.h  ZbxSender.h  procSingletonCheck.h  singleton.h
src/MonitorIntegrationCPP/lib/: monitor_dll.lib
src/MonitorIntegrationCPP/runtime/: MonitorIntegration  monitor_dll_x64.exp  monitor_dll_x86.exp
src/MonitorIntegrationCPP/runtime/monitor/: zabbix.json
src/MonitorIntegrationCPP/src/: main.cpp
src/MonitorIntegrationCPP/src/export/: CHttpServerChannel.cpp  CMonitor.cpp  CMonitorApp.cpp  IMonitorAppImpl.cpp  config.cpp  zbx_sender.cpp
src/MonitorIntegrationFramework/: .gitignore  MonitorIntegrationFramework.sln
src/MonitorIntegrationFramework/Caller/: Caller.csproj  HttpServer.cs  HttpServerBase.cs  Program.cs
src/MonitorIntegrationFramework/MonitorIntegrationFramework/: HttpServer.cs  Monitor.cs  MonitorIntegrationFramework.csproj  MyHttpServer.cs  Singleton.cs  Tcpclient.cs  ZabbixSender.cs  packages.config
src/MonitorManagerBackend/: Dockerfile
src/MonitorManagerBackend/include/: CConfigManager.h  CHttpServerChannel.h  CZabbixManager.h  DBManager.h  PlantformTools.h  baseheader.h  coredump.h  httpClientChannel.h  nocopyable.h  singleton.h
src/MonitorManagerFrontend/: .gitignore  package-lock.json  package.json
监控库/: 监控库使用说明.md
监控库/demo/: Program.cs  main.cpp
(+20 files in other folders)
